--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,27 @@
-<h1>Here are the posts</h1>
+<h2>Add a post</h2>
+    <%= simple_form_for Post.new do |f| %>
+      <%= f.input :title, label: "Write your post title here:" %>
+      <%= f.input :content, label: "Write your post content here:" %>
+      <%= f.submit class: "button-50" %>
+    <% end %>
 
-<%@posts.each do |p| %>
-  <div><%= p.content %></div>
-  <% p.comments.each do |c| %>
-    <span><%= c.content %></span>
+<%@posts.each do |post| %>
+  <div><%= post.title %></div>
+  <% post.comments.each do |comment| %>
+    <% if comment.user_id == 0 %>
+      <span class="text-sm">Usuário anônimo</span>
+      <span class="text-sm"><%= comment.content %></span>
+    <% else %>
+      <% user_email = User.find(comment.user_id).email %>
+      <span class="text-sm"> <%= user_email %>  </span>
+      <span class="text-sm"><%= comment.content %></span>
+    <% end %>
   <% end %>
-
+  <h2>Add a comment</h2>
+    <%= simple_form_for [post, Comment.new] do |f| %>
+      <%= f.input :content, label: "Write your comment here:" %>
+      <%= f.submit class: "button-50" %>
+    <% end %>
 <% end %>
 
   <div><%= paginate @posts %></div>
