--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,9 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :name,
+                input_html: { value: current_user.name },
+                autofocus: true %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
