--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,9 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :name,
+                label: "Nome:",
+                autofocus: true %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
