--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
+  <body class="bg-dark-subtle"><%= render "shared/navbar" %>
 <%= render "shared/flashes" %>
 
     <%= yield %>
