--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,18 +6,26 @@
     <% end %>
 
 <%@posts.each do |post| %>
-  <div><%= post.title %></div>
-  <% post.comments.each do |comment| %>
-    <% if comment.user_id == 0 %>
-      <span class="text-sm">Usuário anônimo</span>
-      <span class="text-sm"><%= comment.content %></span>
-    <% else %>
-      <% user_email = User.find(comment.user_id).email %>
-      <span class="text-sm"> <%= user_email %>  </span>
-      <span class="text-sm"><%= comment.content %></span>
-    <% end %>
-  <% end %>
-
+  <div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+            <!-- Post preview-->
+            <div class="post-preview">
+                <a href="<%= post_path(post)%>">
+                    <h2 class="post-title"><%= post.title %></h2>
+                    <h3 class="post-subtitle"><%= post.content.slice(0,100) +"..." %></h3>
+                </a>
+                <p class="post-meta">
+                    Posted by <%= User.find(post.user_id).name %>
+                    on <%= post.created_at.strftime("%B %d, %Y") %>
+                </p>
+            </div>
+            <!-- Divider-->
+            <hr class="my-4" />
+            <!-- Pager-->
+        </div>
+    </div>
+  </div>
 <% end %>
-
-  <div><%= paginate @posts %></div>
+  <div class="d-flex justify-content-center"><%= paginate @posts %></div>
+  <%# <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div> %>
