--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,12 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body class="bg-dark-subtle">
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
-    <%= turbo_frame_tag "modal" %>
     <%= yield %>
   </body>
 </html>
