--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,13 +1,13 @@
 <div class="container px-4 px-lg-5">
   <div class="row gx-4 gx-lg-5 justify-content-center">
     <div class="col-md-10 col-lg-8 col-xl-7">
-      <!-- Comment form -->
+      <!-- Tag form -->
       <div class="post-preview">
-        <h2 class="text-center">Add a comment</h2>
-        <%= simple_form_for [@post, Comment.new] do |f| %>
-          <%= f.input :content, label: "Write your comment here:" %>
+        <h2 class="text-center">Add a tag</h2>
+        <%= simple_form_for [@post, Tag.new] do |f| %>
+          <%= f.input :tag_name, label: "Tags (separated by commas)" %>
           <div class="d-grid gap-2">
-            <%= f.button :submit, "Create Comment", class: "btn btn-primary" %>
+            <%= f.button :submit, "Create Tag", class: "btn btn-primary" %>
             <%= link_to "Cancel", :back, class: "btn btn-danger" %>
           </div>
         <% end %>
